--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,14 @@
     "require": {
         "php": ">=7.2",
         "hyperf/framework": "2.0.*",
-        "hyperf/di": "2.0.*"
+        "hyperf/di": "2.0.*",
+        "phptars/tars-registry": "0.1.7",
+        "phptars/tars-deploy": "0.1.1",
+        "phptars/tars-utils": "0.3.0",
+        "phptars/tars-report": "0.1.3",
+        "phptars/tars-client": "0.3.0",
+        "phptars/tars2php": "0.3.2",
+        "hyperf/event": "~2.0.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
